feat: swagger update and logout functionality
